# spacetimedb-python-sdk

./: README.md  pyproject.toml
.github/workflows/: integration.yml  tests.yml
bsatn-native/src/: lib.rs
bsatn_native/: Cargo.toml
demo/: README.md  run.sh  setup.sh
docs/: spacetimedb-2.0-migration-research.md
examples/quickstart/client/: main.py
examples/quickstart/client/module_bindings/: message.py  send_message_reducer.py  set_name_reducer.py  system_notification.py  user.py
examples/quickstart/server/: Cargo.toml
examples/quickstart/server/src/: lib.rs
src/spacetimedb_sdk/: bsatn.py  client_cache.py  local_config.py  spacetime_websocket_client.py  spacetimedb_async_client.py  spacetimedb_client.py
tests/integration/: test_integration.py
tests/integration/module/: Cargo.toml
tests/integration/module/src/: lib.rs
tests/integration/module_bindings/: message.py  send_message_reducer.py  set_name_reducer.py  user.py
tests/unit/: test_async_client.py  test_auth.py  test_bsatn.py  test_examples.py  test_message_parsing.py  test_reducer_api.py
