[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "spacetimedb_sdk"
authors = [
    { name = "Clockwork Labs", email = "john@clockworklabs.io" },
]

dependencies = [
    "websocket-client",
    "configparser",
]
version = "0.7.0"
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

# urls
# Should describe where to find useful info for your project
[project.urls]
homepage = "https://spacetimedb.com"
repository = "https://github.com/clockworklabs/spacetimedb-python-sdk"

[tool.maturin]
# Python source lives under src/
python-source = "src"
# The Rust extension module name (must match #[pymodule] fn name in lib.rs)
module-name = "bsatn_native"
# Path to the Rust crate manifest
manifest-path = "bsatn-native/Cargo.toml"
features = ["pyo3/extension-module"]
