[package]
name = "bsatn_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "bsatn_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
spacetimedb-sats = { git = "https://github.com/clockworklabs/SpacetimeDB", branch = "master" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
