[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# "2" targets the SpacetimeDB v2 server (clockworklabs/spacetime:latest).
# Using "1" or "0.x" produces an incompatible ABI that the v2 server rejects
# with "unable to determine ABI of module (may be on an spacetime version < 0.8)".
spacetimedb = "2"
